<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <include
        android:id="@+id/loginToolbar"
        layout="@layout/toolbar"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_subtext"
                android:layout_marginTop="33dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/login_text_email"
                android:layout_width="match_parent"
                android:text="@string/email_id"
                android:gravity="left"
                android:textStyle="bold"
                android:textSize="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginTop="135dp"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:layout_height="@dimen/dimen_11sp">
            </TextView>
            <EditText
                android:id="@+id/login_edit_email"
                android:layout_below="@+id/login_text_email"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_toRightOf="@+id/prefix_text"
                android:text=""
                android:textSize="@dimen/seventeen_sp"
                android:hint="@string/email_id_hint"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:maxLength="10"
                android:focusedByDefault="true"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_height="wrap_content">
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/five_dp"
                android:id="@+id/email_edit_line"
                android:layout_alignStart="@+id/prefix_text"
                android:layout_marginRight="@dimen/layout_margin_16"
                android:layout_marginLeft="@dimen/layout_margin_16"
                android:layout_below="@+id/login_edit_email"
                android:background="@color/lite_grey"
                android:layout_height="2dp">
            </View>

            <TextView
                android:id="@+id/login_text_password"
                android:layout_width="match_parent"
                android:text="@string/password"
                android:gravity="left"
                android:textStyle="bold"
                android:textSize="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginTop="@dimen/adddevice_content_margin_top"
                android:layout_below="@+id/email_edit_line"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:layout_height="@dimen/dimen_11sp">
            </TextView>
            <EditText
                android:id="@+id/login_edit_password"
                android:layout_below="@+id/login_text_password"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_toRightOf="@+id/prefix_text"
                android:text=""
                android:hint="@string/password_hint"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:maxLength="10"
                android:focusedByDefault="true"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_height="wrap_content">
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_alignStart="@+id/prefix_text"
                android:layout_marginRight="@dimen/layout_margin_16"
                android:layout_marginLeft="@dimen/layout_margin_16"
                android:id="@+id/password_edit_line"
                android:layout_below="@+id/login_edit_password"
                android:background="@color/lite_grey"
                android:layout_height="2dp">
            </View>
           <!-- <EditText
                android:id="@+id/emailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="144dp"
                android:layout_marginRight="10dp"
                android:hint="@string/email_id_hint"
                android:inputType="text"
                android:textColor="#000000"
                />-->

           <!-- <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailId"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorLogin"
                android:hint="Jio Number"
                android:inputType="phone"
                android:longClickable="false"
                android:textColor="#000000"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@color/colorLogin" />-->

            <Button
                android:id="@+id/login_btn"
                android:layout_width="@dimen/adddevice_button_width"
                android:layout_height="@dimen/adddevice_button_height"
                android:layout_below="@+id/password_edit_line"
                android:layout_marginTop="@dimen/adddevice_content_margin_top"
                android:background="@drawable/button_frame_blue"
                android:text="@string/login_next"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/adddevice_content_font_size" />

            <TextView
                android:id="@+id/ortext"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/or"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_below="@+id/login_btn"
                android:textSize="@dimen/twenty_dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/fb_login"
                android:layout_width="@dimen/adddevice_button_width"
                android:layout_height="@dimen/adddevice_button_height"
                android:layout_below="@+id/ortext"
                android:layout_marginTop="@dimen/adddevice_content_margin_top"
                android:background="@drawable/border_fb_button"
                android:text="@string/fb_login"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:textColor="@color/fb_login_text_color"
                android:textSize="@dimen/adddevice_content_font_size" />
            <Button
                android:id="@+id/google_login"
                android:layout_width="@dimen/adddevice_button_width"
                android:layout_height="@dimen/adddevice_button_height"
                android:layout_below="@+id/fb_login"
                android:layout_marginTop="@dimen/map_diag_margin_20"
                android:background="@drawable/border_google_login_button"
                android:text="@string/google_login"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:textColor="@color/google_login_text_color"
                android:textSize="@dimen/adddevice_content_font_size" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>