<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardviewlayout_device_background_color"
    >

    <include
        android:id="@+id/emailConfirmToolbar"
        layout="@layout/toolbar"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="22dp"
        android:layout_below="@+id/emailConfirmToolbar"
        android:layout_marginTop="20dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qrcode_scan_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/qrscan_instruction"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/margin_24"
                android:textSize="@dimen/twenty_dp"

                />


            <Button
                android:id="@+id/scan_btn"
                android:layout_width="@dimen/adddevice_button_width"
                android:layout_height="@dimen/adddevice_button_height"
                android:layout_below="@+id/password_condition"
                android:background="@drawable/button_frame_blue"
                android:text="@string/scan_qr_code"
                android:layout_above="@+id/manual_add"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/adddevice_content_font_size" />

            <TextView
                android:id="@+id/manual_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_24"
                android:text="@string/add_manual"
                android:layout_marginBottom="50dp"
                android:textColor="@color/cardviewlayout_contenttext_color"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/adddevice_content_font_size"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>